test/langtools/tools/javac/valhalla/lworld-values/CheckFeatureGate1.out
CheckFeatureGate1.java:10:12: compiler.err.feature.not.supported.in.source: (compiler.misc.feature.inline.type), 13, 15
1 error
